# PDS

./: CMakeLists.txt  README.md
include/: arczee.h  autodiff.h  clBufferEx.h  cldef.h  cldev.h  misc.h  mod_shared_ptr.hpp  spdsys.h
src/: CMakeLists.txt
src/ArcZeeMath/: CMakeLists.txt  arczee.cpp  cldev.cpp  common.cl  common2.cl  dpotrf_v1.cl  dpotrf_v1.cpp  dpotrf_v2.cl  dpotrf_v2.cpp  dpotrf_v3.cl  dpotrf_v3.cpp  dpotrf_v4.cl  dpotrf_v4.cpp  dpotrf_v5_discard.cl  dpotrf_v5_discard.cpp  dpotrs_v1.cl  dpotrs_v1.cpp  dpotrs_v2.cl  dpotrs_v2.cpp  dpotrs_v3.cl  dpotrs_v3.cpp  misc.cpp
src/demo/: CMakeLists.txt  autodiff_test.cpp  chol_test.cpp
